--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>ReportGenerator</name>
+  <name>report.ReportGenerator</name>
   <url>http://maven.apache.org</url>
 
   <properties>
